--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/JsonEditor.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/JsonEditor.razor
@@ -1,4 +1,4 @@
-﻿<MCard Outlined Flat Color="#F0F3FA" Style="padding:6px 6px 6px 0;">
+﻿<MCard Outlined Disabled=@Disabled Flat Color="#F6F8FD" Style="padding:6px 6px 6px 0;">
     <div style="width: 100%; min-height: 312px; height: 312px; overflow-y: auto; ">
         <div style="display: flex;height:@((_lineCount+1)*24)px">
             <div style="width:50px;text-align:center;color:rgb(46,117,182);">
@@ -18,8 +18,7 @@
                     </div>
                 }
             </div>
-            <textarea style="outline:none;resize:none;width:100%;" autofocus
-                      disabled="@Disabled"
+            <textarea style="outline:none;resize:none;width:100%;" autofocus                     
                       @oninput="OnInput" @ref="Ref" value="@Value" @onchange="HandleOnChange">
             </textarea>
         </div>
