--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -61,8 +61,8 @@
         <div class="d-flex flex-column" style="width:100%; height:100%; padding: 48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
                 <p style="font-size:14px; font-weight:700; color:#1B2559">标签</p>
-                <MTextField Dense Outlined @bind-Value="_labelModal.Data.TypeName" Label="TypeName"></MTextField>
-                <MTextField Disabled="_labelModal.HasValue" Dense Class="mt-12" Outlined @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></MTextField>
+                <STextField Outlined @bind-Value="_labelModal.Data.TypeName" Label="TypeName"></STextField>
+                <STextField Disabled="_labelModal.HasValue" Class="mt-12" Outlined @bind-Value="_labelModal.Data.TypeCode" Label="TypeCode"></STextField>
                 <p class="mt-12" style="font-size:14px; font-weight:700; color:#1B2559">标签值</p>
                 <div style="border-radius: 8px; border: 1px solid #E2E7F4;" class="py-3">
                     <MRow Style="color: #A3AED0; font-size: 14px;" Class="px-6" NoGutters>
@@ -76,8 +76,8 @@
                         <MRow Class="pt-4 px-6" NoGutters Justify="JustifyTypes.SpaceBetween">
                             <STextField Class="pr-6" Outlined @bind-Value="item.Name" Label="Name"></STextField>
                             <STextField Disabled="@(_labelModal.HasValue && item.Disabled)" Outlined @bind-Value="item.Code" Label="Code"></STextField>
-                            <div class="d-flex justify-end align-center ml-6">
-                                <MIcon OnClick="()=>RemoveLabelValue(item.Index)" Class="hover-pointer mr-3">mdi-close</MIcon>
+                            <div class="d-flex justify-end align-center ml-6" style="width: 5%">
+                                <MIcon Disabled="@(_labelValues.Count==1)" OnClick="()=>RemoveLabelValue(item.Index)" Class="hover-pointer mr-3">mdi-close</MIcon>
                                 <MIcon OnClick="()=>AddLabelValue(item.Index)" Class="hover-pointer">mdi-plus</MIcon>
                             </div>
                         </MRow>
