--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
@@ -82,21 +82,23 @@
                             </MTabs>
                         </MCard>
                     </MRow>
-                    <div class="rounded-5 mt-6 py-2" style="height:calc(100vh - 304px );background:#fff;display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
+                    <div class="rounded-5 mt-3" style="height:calc(100vh - 292px ); display:flex; flex-direction:column; justify-content:space-between; overflow:auto;">
                         <div>
                             <MExpansionPanels Flat Accordion>
                                 @foreach (var project in _projects)
                                 {
                                     var apps = _apps.Where(app => app.ProjectId == project.Id && app.EnvironmentClusters.Select(envCluster => envCluster.Id).Contains(_selectEnvClusterId.AsT1)).ToList();
-                                    <MExpansionPanel Class="rounded-5">
-                                        <MExpansionPanelHeader>
+                                    <MExpansionPanel Class="rounded-5 my-3">
+                                        <MExpansionPanelHeader Style="height: 56px;" Class="my-6">
                                             <ChildContent>
-                                                <span style="display:flex;align-items:center;margin-right:10px;">
-                                                    <div class="emphasis--text h6" @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)">
-                                                        @project.Name
-                                                        <span class="ml-2 regular3--text btn">|</span>
-                                                        <sapn class="ml-1 regular3--text btn">@T("AppCount"):@apps.Count</sapn>
-                                                        <div class="regular3--text btn d-flex" style="padding:0">
+                                                <span style="display:flex;align-items:center; margin-right:10px;">
+                                                    <div class="emphasis--text h6">
+                                                        <MHover Context="hoverContext">
+                                                            <span @onclick:stopPropagation @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="hoverContext.Attrs" class="@(hoverContext.Hover ? "primary--text":"")">
+                                                                @project.Name
+                                                            </span>
+                                                        </MHover>
+                                                        <div class="mt-1 regul ar3--text body2 d-flex" style="padding:0">
                                                             @{
                                                                 string backgroundColor;
                                                                 switch (project.LabelCode.ToLower())
@@ -119,6 +121,8 @@
                                                                 @project.LabelName
                                                             </div>
                                                             @project.Identity
+                                                            <span class="ml-2 regular3--text body2">|</span>
+                                                            <sapn class="ml-2 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
                                                         </div>
                                                     </div>
                                                 </span>
@@ -131,7 +135,7 @@
                                         </MExpansionPanelHeader>
                                         <MExpansionPanelContent>
                                             <MRow>
-                                                @foreach (var app in apps.Where(app => app.IsPinned).Take(3))
+                                                @foreach (var app in apps.OrderByDescending(app => app.IsPinned).ThenByDescending(app => app.ModificationTime).Take(6))
                                                 {
                                                     @if (app.ProjectId == project.Id)
                                                     {
@@ -152,13 +156,31 @@
                                                     }
                                                 }
                                             </MRow>
-                                            <div class="d-flex justify-start mt-3">
-                                                <div>
-                                                    <img style="height:24px;width:24px" src="/img/avatar/9.svg">
-                                                </div>
+                                            <div class="d-flex justify-space-between align-flex-end mt-3 mb-2">
+                                                @{
+                                                    var team = _allTeams.FirstOrDefault() ?? new();
+                                                    <MTooltip Right>
+                                                        <ActivatorContent>
+                                                            <MAvatar Size="24" @attributes="@context.Attrs">
+                                                                <MImage Src="@team.Avatar"></MImage>
+                                                            </MAvatar>
+                                                        </ActivatorContent>
+                                                        <ChildContent>
+                                                            <span>@team.Name</span>
+                                                        </ChildContent>
+                                                    </MTooltip>
+                                                }
+                                                <MHover>
+                                                    @{
+                                                        var mClass = $"{(context.Hover ? "primary--text" : "regular2--text")}";
+                                                        <div @onclick="()=>NavigateToAppAsync(project.Id)" @attributes="context.Attrs" class="@($"hover-pointer btn {mClass}")">
+                                                            @T("More")
+                                                            <MIcon Class="@($"ml-1 {mClass}")" Size="18">mdi-chevron-right</MIcon>
+                                                        </div>
+                                                    }
+                                                </MHover>
                                             </div>
                                         </MExpansionPanelContent>
-                                        <hr class="mx-6" style="background: none repeat scroll 0 0 #E9EDF7; border: thin none; height: 1px;" />
                                     </MExpansionPanel>
                                 }
                             </MExpansionPanels>
@@ -184,36 +206,3 @@
         </MTabItem>
     </MTabsItems>
 </CascadingValue>
-
-@code {
-    private string[] _tags = new string[]
-    {
-        "Work",
-        "Home Improvement",
-        "Vacation",
-        "Food",
-        "Drawers",
-        "Shopping",
-        "Art",
-        "Tech",
-        "Creative Writing",
-        "Work",
-        "Home Improvement",
-        "Vacation",
-        "Food",
-        "Drawers",
-        "Shopping",
-        "Art",
-        "Tech",
-        "Creative Writing",
-        "Work",
-        "Home Improvement",
-        "Vacation",
-        "Food",
-        "Drawers",
-        "Shopping",
-        "Art",
-        "Tech",
-        "Creative Writing"
-    };
-}
