--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/_Imports.razor
@@ -10,3 +10,4 @@
 @using Masa.BuildingBlocks.BasicAbility.Pm.Model
 @using Masa.Stack.Components
 @using Masa.Dcc.Web.Admin.Rcl.Pages.Modal;
+@using Humanizer
