style: update style

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Landscape.razor
@@ -120,7 +120,7 @@
                                                             <div class="d-flex justify-center mr-2" style="border-radius:6px; color:#fff; background-color:@backgroundColor; padding:0 4px;">
                                                                 @project.LabelName
                                                             </div>
-                                                            @project.Identity
+                                                            <span class="regular3--text body2">@project.Identity</span>
                                                             <span class="ml-2 regular3--text body2">|</span>
                                                             <sapn class="ml-2 regular3--text body2">@T("AppCount"):@apps.Count</sapn>
                                                         </div>
